k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-devops-service
spec:
  type: ClusterIP
  selector:
    app: api-devops
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
